# tertius

./: .gitignore  Cargo.toml  LICENSE  PLAN_PHASE1.md  README.md
benches/: phase2_bench.rs  poly_bench.rs  series_bench.rs
crates/tertius/: Cargo.toml
crates/tertius-core/: Cargo.toml
crates/tertius-core/src/: arena.rs  expr.rs  handle.rs  intern.rs  lib.rs
crates/tertius-diffalg/: Cargo.toml
crates/tertius-diffalg/src/: derivation.rs  element.rs  lib.rs  tower.rs
crates/tertius-factor/: Cargo.toml
crates/tertius-factor/src/: berlekamp.rs  cantor_zassenhaus.rs  hensel.rs  leading_coeff.rs  lecerf.rs  lib.rs  lll.rs  multivariate.rs  multivariate_hensel.rs  squarefree.rs  univariate.rs
crates/tertius-groebner/: Cargo.toml
crates/tertius-groebner/src/: criteria.rs  labeled_poly.rs  lib.rs  m5gb.rs  macaulay.rs  monomial.rs  parallel_reduce.rs  reductor_store.rs  signature.rs
crates/tertius-integers/: Cargo.toml
crates/tertius-integers/src/: integer.rs  lib.rs  modular.rs  proptests.rs  rational.rs
crates/tertius-integrate/: Cargo.toml
crates/tertius-integrate/src/: lib.rs  polynomial.rs  rational.rs  rothstein_trager.rs  special_forms.rs
crates/tertius-integrate/src/algebraic/: elliptic.rs  mod.rs  rationalize.rs  sqrt_rational.rs
crates/tertius-integrate/src/definite/: evaluate.rs  improper.rs  mod.rs
crates/tertius-integrate/src/numerical/: adaptive.rs  gauss_kronrod.rs  mod.rs
crates/tertius-integrate/src/proofs/: liouville.rs  mod.rs
crates/tertius-integrate/src/risch/: exponential.rs  heuristic.rs  logarithmic.rs  mod.rs
crates/tertius-integrate/src/special_definite/: beta_gamma.rs  dirichlet.rs  golden_ratio.rs  mod.rs
crates/tertius-integrate/src/unified/: api.rs  classifier.rs  convert.rs  dispatch.rs  mod.rs  result.rs
crates/tertius-limits/: Cargo.toml
crates/tertius-limits/src/: comparison.rs  gruntz.rs  lib.rs  mrv.rs
crates/tertius-linalg/: Cargo.toml
crates/tertius-linalg/src/: berlekamp_massey.rs  block_wiedemann.rs  dense_matrix.rs  lib.rs  parallel.rs  simd.rs  smith_normal_form.rs  sparse_matrix.rs  tests.rs
crates/tertius-poly/: Cargo.toml
crates/tertius-poly/src/: dense.rs  lib.rs  monomial.rs  ordering.rs  proptests.rs  sparse.rs
crates/tertius-poly/src/algorithms/: ben_or_tiwari.rs  berlekamp_massey.rs  fft.rs  gcd.rs  geobucket.rs  karatsuba.rs  mod.rs  ntt.rs  resultant.rs  sparse_gcd.rs  squarefree.rs
crates/tertius-rational-func/: Cargo.toml
crates/tertius-rational-func/src/: arithmetic.rs  hermite.rs  lib.rs  partial_fractions.rs  rational_func.rs
crates/tertius-rings/: Cargo.toml
crates/tertius-rings/src/: algebraic.rs  finite_field.rs  integers.rs  lib.rs  poly_ring.rs  rationals.rs  splitting_field.rs  traits.rs
crates/tertius-series/: Cargo.toml
crates/tertius-series/src/: laurent.rs  lib.rs  ops.rs  power_series.rs  taylor.rs
crates/tertius-simplify/: Cargo.toml
crates/tertius-simplify/src/: cost.rs  engine.rs  language.rs  lib.rs
crates/tertius-simplify/src/rules/: arithmetic.rs  exp_log.rs  integration.rs  mod.rs  trig.rs
crates/tertius-solve/: Cargo.toml
crates/tertius-solve/src/: fglm.rs  lib.rs  quotient.rs  triangular.rs
crates/tertius-special-func/: Cargo.toml
crates/tertius-special-func/src/: catalog.rs  elliptic.rs  error_func.rs  hypergeometric.rs  lib.rs  polylog.rs
crates/tertius/src/: lib.rs
examples/: difficult_integrals.rs  factorization_examples.rs  impossible_integrals.rs  integration_examples.rs  physics_examples.rs
scripts/: benchmark_phase2.py  benchmark_sympy.py  main.py  pyproject.toml
src/: lib.rs
