[package]
name = "tertius-factor"
description = "Polynomial factorization algorithms for Tertius CAS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tertius-integers = { workspace = true }
tertius-rings = { workspace = true }
tertius-poly = { workspace = true }
tertius-linalg = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
