[package]
name = "tertius-integers"
description = "Arbitrary precision integers and rationals for Tertius CAS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dashu.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

