[package]
name = "tertius-integrate"
description = "Symbolic integration engine for Tertius CAS (Risch algorithm)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tertius-poly.workspace = true
tertius-rings.workspace = true
tertius-integers.workspace = true
tertius-rational-func.workspace = true
tertius-diffalg.workspace = true
tertius-factor.workspace = true
tertius-core.workspace = true
thiserror.workspace = true
smallvec.workspace = true

[dev-dependencies]
proptest.workspace = true
