[package]
name = "tertius-rings"
description = "Algebraic structures (rings, fields, algebraic extensions) for Tertius CAS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tertius-integers.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
