[package]
name = "tertius-solve"
version = "0.1.0"
edition = "2021"
description = "Polynomial system solving for Tertius CAS"
license = "MIT"

[dependencies]
tertius-poly = { path = "../tertius-poly" }
tertius-rings = { path = "../tertius-rings" }
tertius-integers = { path = "../tertius-integers" }
tertius-groebner = { path = "../tertius-groebner" }
tertius-linalg = { path = "../tertius-linalg" }
num-traits = "0.2"
rayon = "1.10"
rustc-hash = "2.1"
thiserror = "2.0"

[dev-dependencies]
proptest = "1"
